--- a/apine/static/css/default.css
+++ b/apine/static/css/default.css
@@ -21,8 +21,12 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
-	color: #eaeaea;
-	background: #2c3e50;
+	color: #2c3e50;
+	background: #fff;
+}
+
+td > span {
+  margin-right:20px;
 }
 
 a {
@@ -44,7 +48,7 @@ a:active {
 
 .container > header {
 	text-align: center;
-	background: rgba(0,0,0,0.01);
+	background: rgba(0,0,0,0);
 }
 
 .container > header h1 {
